--- a/.gitignore
+++ b/.gitignore
@@ -2,4 +2,5 @@
 /_my
 # 2024-07-12 Dmitrii Fediuk https://upwork.com/fl/mage2pro
 # "Improve MySQL settings for Magento": https://github.com/27estore/192.241.193.5/issues/8
+/etc/mysql/credentials.cnf
 /etc/mysql/debian.cnf
