https://github.com/27estore/192.241.193.5/issues/7

--- a/etc/php/8.2/common/php.ini
+++ b/etc/php/8.2/common/php.ini
@@ -1,3 +1,6 @@
+;  2024-07-19 Dmitrii Fediuk https://upwork.com/fl/mage2pro
+; 1) "Improve PHP settings for Magento": https://github.com/27estore/192.241.193.5/issues/7
+; 2) "Refactor PHP settings": https://github.com/27estore/192.241.193.5/issues/19
 [PHP]
 allow_url_fopen = On
 allow_url_include = Off
