--- a/etc/php/8.2/common/conf.d/modules.ini
+++ b/etc/php/8.2/common/conf.d/modules.ini
@@ -8,12 +8,12 @@ mysqlnd.collect_memory_statistics = Off
 mysqlnd.collect_statistics = On
 ;----
 zend_extension = opcache.so
-opcache.blacklist_filename = "/etc/php/_my/opcache-blacklist.ini"
+opcache.blacklist_filename = "/etc/php/common/opcache-blacklist.ini"
 opcache.enable = 1
 ; 2017-05-16 Dmitrii Fediuk https://upwork.com/fl/mage2pro
 ; For Oro Platform https://oplatform.club/t/38
 opcache.enable_cli = 0
-opcache.error_log = "/var/log/_my/opcache.log"
+opcache.error_log = "/var/log/_mage2pro/opcache.log"
 opcache.interned_strings_buffer = 64
 opcache.max_accelerated_files = 130986
 ; 2017-05-17 Dmitrii Fediuk https://upwork.com/fl/mage2pro
