https://github.com/27estore/192.241.193.5/issues/19

--- a/etc/php/8.2/fpm.ini
+++ b/etc/php/8.2/fpm.ini
@@ -1,7 +1,10 @@
 ; 2017-05-19 http://php.net/manual/en/install.fpm.configuration.php
 ; 2023-08-25 "Install PHP 8.2": https://github.com/dmitrii-fediuk/5.9.188.84/issues/3
+;  2024-07-19 Dmitrii Fediuk https://upwork.com/fl/mage2pro
+; 1) "Improve PHP settings for Magento": https://github.com/27estore/192.241.193.5/issues/7
+; 2) "Refactor PHP settings": https://github.com/27estore/192.241.193.5/issues/19
 [global]
-error_log = /var/log/_my/fpm82.log
+error_log = /var/log/_mage2pro/fpm82.log
 ; 2017-05-18 I have changed the level, because I do not need the notices, they look like: «NOTICE: fpm is running, pid 30809».
 log_level = warning
 pid = /run/php/php8.2-fpm.pid
@@ -16,7 +19,7 @@ pid = /run/php/php8.2-fpm.pid
 ; https://www.orocrm.com/documentation/2.0/book/installation#step-3-web-server-configuration
 catch_workers_output = yes
 group = www-data
-listen = 127.0.0.1:9005
+listen = /run/php/php8.2-fpm.sock
 ; 2017-05-19
 ; Oro Platform uses it in its configuration example:
 ; https://www.orocrm.com/documentation/2.0/book/installation#step-3-web-server-configuration
